opam-version: "2.0"
maintainer:   ["contact@adlink-labs.tech"]
authors:      ["Angelo Corsaro" "Julien Enoch" "Olivier Hecart" "Gabriele Baldoni"]
homepage:     "https://github.com/atolab/yaks-ocaml"
bug-reports:  "https://github.com/atolab/yaks-ocaml/issues/"
dev-repo:     "git://github.com/atolab/yaks-ocaml.git"
tags:         ["org:adlink-technology"]

version:"0.3.0"
license: "Apache-2.0"

build: [
["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]


depends: [
  "dune"
  "fmt"
  "logs"
  "lwt"
  "ppx_deriving"
  "lwt_ppx"
  "apero-core" {>= "0.4.4"}
  "yaks-common" {= "0.3.0"}
]

synopsis : "YAKS OCaml API"
description: """
The YAKS API binding for OCaml."""
