(library
 (name            yaks_ocaml)
  (modules        yaks_ocaml yaks_api)
  (public_name    yaks-ocaml)
  (wrapped     false)
  (libraries       yaks-common zenoh-ocaml cstruct lwt lwt.unix logs logs.lwt ppx_deriving.show ppx_deriving.ord)
  (preprocess
    (pps ppx_deriving.show ppx_deriving.ord lwt_ppx ppx_cstruct)))

(toplevel
  (name yaks_toplevel)
  (libraries compiler-libs.toplevel yaks_ocaml yaks-common zenoh-ocaml cstruct lwt lwt.unix logs logs.lwt ppx_deriving.show ppx_deriving.ord))
